--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
 									<header class="main">
 										<h1>Remote Control Holder</h1>
 									</header>
-									<video width="320" height="240" controls>
+									<div class="beginning-of-project">
+										<h2>Helping remote controls </h2>
+										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
+										
+										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
+										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
+										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
+										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
+									</div>
+									<video controls>
 										<source src="images/movie.mp4" type="video/mp4">
 									  Your browser does not support the video tag.
 									</video>
@@ -87,8 +96,8 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="team.html">About Us (+ contributions)</a></li>
+										<li><a href="process.html">Design Process</a></li>
 									</ul>
 								</nav>
 
