--- a/team.html
+++ b/team.html
@@ -80,8 +80,8 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="team.html">About Us (+ contributions)</a></li>
+										<li><a href="process.html">Design Process</a></li>
 									</ul>
 								</nav>
 
