--- a/index.html
+++ b/index.html
@@ -5,119 +5,158 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Homepage GIX 511</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Homepage GIX 511</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
+<body class="is-preload">
 
-							<!-- Header -->
-								<header id="header">
-									<a href="index.html" class="logo"><strong>Remote Control Holder</strong>: by Team 11</a>
-								</header>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-							<!-- Content -->
-								<section>
-									<header class="main">
-										<h1>Remote Control Holder</h1>
-									</header>
-									<div class="beginning-of-project">
-										<h2>Helping remote controls </h2>
-										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
-										
-										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
-										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
-										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
-										<h3>Team members:</h3><p> Guanting Li and Xuefei Chen</p>
-									</div>
-									<video controls>
-										<source src="images/movie.mp4" type="video/mp4">
-									  Your browser does not support the video tag.
-									</video>
-									<div class="box alt">
-										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-											<!-- Break -->
-											<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-											<!-- Break -->
-											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
-										</div>
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
 
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+				<!-- Header -->
+				<header id="header">
+					<a href="index.html" class="logo"><strong>Remote Control Holder</strong>: by Team 11</a>
+				</header>
 
-									<hr class="major" />
-
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-
-								</section>
-
-						</div>
+				<!-- Content -->
+				<section>
+					<header class="main">
+						<h1>Remote Control Holder</h1>
+					</header>
+					<div class="beginning-of-project">
+						<!-------- Tagline! -------->
+						<h3 id="tagline">Helping remote controls stay reachable, one table at a time</h3>
+						<p><strong>Team members:</strong> <a href="team.html">Guanting Li and Xuefei Chen</a></p>
 					</div>
 
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
+					<hr class="major" />
 
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="team.html">About Us (+ contributions)</a></li>
-										<li><a href="process.html">Design Process</a></li>
-									</ul>
-								</nav>
-
+					<h2>Description of Design</h2>
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-4"><span class="image fit"><img src="images/Final/gif1.gif" alt="" /></span>
+							</div>
+							<div class="col-4"><span class="image fit"><img src="images/Final/proj1.jpeg" alt="" /></span>
+							</div>
+							<div class="col-4"><span class="image fit"><img src="images/Final/gif2.gif" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>For our team, we focused on how people have a tendency to misplace their remote controls all over the place, leading to frustration whenever the next person sits down and cannot find the remote control anywhere in sight. With this in mind, we set out to design a holder that can stow remote controls underneath a table, focusing on both functionality and form aesthetics. Our intended users are people (like ourselves) who want to have the remote controls easily accessible to us at any given moment.</p>
 						
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+					<p>In our design, we used an S-shape curve to help guide the table edge into our design with one side of the curve, and hold a remote control with the other side of the curve. The electronic components inside our prototype allows for the remote control holder to light up whenever a remote is not placed within, thus gently reminding users of placing back the remote. This allows our users to always keep their remotes in a set location, reducing their chances of losing their remote controls constantly. There also is a modular stackable component within our design, which allows for multiple holders to connect with each other and form a larger "hub" for remote controls.</p>
 
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-3 off-3"><span class="image fit"><img src="images/Final/stacker1.jpeg" alt="" /></span>
+							</div>
+							<div class="col-3"><span class="image fit"><img src="images/Final/stacker2.jpeg" alt="" /></span>
+							</div>
 						</div>
 					</div>
+					<p>(Pictured above: modular stackable components. One part connects with the other, if two or more of this holder design is present. Parts are toleranced to appropriate measures.)</p>
+
+					<hr class="major" />
+
+					<h2>Video</h2>
+					<video controls>
+						<source src="images/movie.mp4" type="video/mp4">
+						Your browser does not support the video tag.
+					</video>
+
+					<hr class="major" />
+
+					<h2>Gallery</h2>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 off-2"><span class="image fit"><img src="images/Final/proj2.jpeg" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>Above: Photo of project, without circuits placed inside. </p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 off-2"><span class="image fit"><img src="images/Final/proj3.jpeg" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>Above: Photo of circuit housing. This can be cleaned up in the future to give a more "clean" look for our designs.</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 off-2"><span class="image fit"><img src="images/Final/proj4.jpg" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>Above: Photo of circuit diagram, along with circuit.</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 off-2"><span class="image fit"><img src="images/Final/proj5.jpg" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>Above: Photo of newer print (pink), with cross-shaped attachments (dark green) for allowing remote controls of different sizes to remain stable once they are placed inside the holder, as well as C-shaped connectors (orange) that can ensure a stiffer connection for connecting holder-pieces together. </p>
+
+					<hr class="major" />
+
+					<h2>Links</h2>
+					<p><a href="team.html">Team members and contributions</a>: redirects you to the "About Us" page.</p>
+					<p><a href="process.html">Processes and Challenges</a>: redirects you to the "Design Process" page.</p>
+					<p><a href="https://drive.google.com/file/d/1GWnmsE3xfGxSWY_E-pCqDKPZK7Qgruek/view?usp=sharing">Diagrams</a>: 2D schematics of our final product iteration.</p>
+
+				</section>
 
 			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Sidebar -->
+		<div id="sidebar">
+			<div class="inner">
 
-	</body>
+				<!-- Menu -->
+				<nav id="menu">
+					<header class="major">
+						<h2>Menu</h2>
+					</header>
+					<ul>
+						<li><a href="index.html">Homepage</a></li>
+						<li><a href="team.html">About Us (+ contributions)</a></li>
+						<li><a href="process.html">Design Process</a></li>
+					</ul>
+				</nav>
+
+
+				<!-- Footer -->
+				<footer id="footer">
+					<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a
+							href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5
+							UP</a>.</p>
+				</footer>
+
+			</div>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
