--- a/process.html
+++ b/process.html
@@ -5,103 +5,170 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Homepage GIX 511</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<head>
+	<title>Homepage GIX 511</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
+<body class="is-preload">
 
-							<!-- Header -->
-								<header id="header">
-									<a href="index.html" class="logo"><strong>Remote Control Holder</strong>: by Team 11</a>
-								</header>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-							<!-- Content -->
-								<section>
-									<header class="main">
-										<h1>Remote Control Holder</h1>
-									</header>
+		<!-- Main -->
+		<div id="main">
+			<div class="inner">
 
-									<span class="image main">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
+				<!-- Header -->
+				<header id="header">
+					<a href="index.html" class="logo"><strong>Remote Control Holder</strong>: by Team 11</a>
+				</header>
 
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-
-								</section>
-
-						</div>
+				<!-- Content -->
+				<section>
+					<header class="main">
+						<h1>Remote Control Holder</h1>
+					</header>
+					<div class="beginning-of-project">
+						<!-------- Tagline! -------->
+						<h3 id="tagline">Design Processes</h3>
+						<p><strong>Team members:</strong> <a href="team.html">Guanting Li and Xuefei Chen</a></p>
 					</div>
 
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
+					<hr class="major" />
 
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
+					<h2>Description of Design</h2>
+				
+					<p>Through 5 weeks, we iterated through many different products. We learned that a simple remote control holder actually involves a lot of thought process between MVP and actual final iteration (and beyond, since there is always room for further improvement).</p>
 
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="team.html">About Us (+ contributions)</a></li>
-										<li><a href="process.html">Design Process</a></li>
-									</ul>
-								</nav>
+					<hr class="major" />
 
-						
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+					<h2>Week 1</h2>
 
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-3"><span class="image fit"><img src="images/w1/e1.jpg" alt="" /></span></div>
+							<div class="col-3"><span class="image fit"><img src="images/w1/e2.jpg" alt="" /></span></div>
+							<div class="col-3"><span class="image fit"><img src="images/w1/e9.jpg" alt="" /></span></div>
+							<div class="col-3"><span class="image fit"><img src="images/w1/e8.jpg" alt="" /></span></div>
 						</div>
 					</div>
+					<p>Drawing inspiration first from sponge holders, we briefly entertained the idea of making a better sponge holder, before proceeding onto the idea of creating a remote control holder. (Rightmost sponge-holder dispenses soap onto sponge.)</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-4"><span class="image fit"><img src="images/w1/ref1.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/ref2.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/ref3.png" alt="" /></span></div>
+						</div>
+					</div>
+					<p>On the next step, we attempted to draw inspiration from products currently on the market, such as an ergonomic remote control that doesn't get stuck in between sofas (left), a remote control holder that sticks to walls (center), and a bucket that can potentially hold remote controllers (right).</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchx1.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchx2.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchg3.png" alt="" /></span></div>
+						</div>
+					</div>
+					<p>After a brief round of considerations for making remote controls more easily found by attaching a stand on the back, we decided to pivot and find a better method of mitigating remote control loss for ourselves. Having a floating basket powered by a motor and stabilized by a magnet turned out to also be a not-so-great idea.</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchg1.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchg2.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchx4.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchx5.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchx6.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchx8.png" alt="" /></span></div>
+						</div>
+					</div>
+					<p>Lots of brainstorming was done to generate ideas. Visiting Justin's office hours and receiving input from their instruction has been helpful as well. From there, we made some final ideas ready for our presentation with Justin on Friday.</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchx7.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchg4.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w1/sketchg5.png" alt="" /></span></div>
+						</div>
+					</div>
+					<p>We presented a preliminary model for remote control holders (center) for our presentation; Justin's suggestions led us to create a more hang-able holder.</p>
+
+					<p>Our biggest challenge this week was landing on one single project and one single idea for our project. Learning this process has been fun however.</p>
+
+					<hr class="major" />
+					<h2>Week 2-3</h2>
+					<p>For these weeks, we took a focus around challenges, and solved these challenges amongst ourselves and with the teaching team.</p>
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-4"><span class="image fit"><img src="images/w2-3/1.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w2-3/2.png" alt="" /></span></div>
+							<div class="col-4"><span class="image fit"><img src="images/w2-3/3.png" alt="" /></span></div>
+						</div>
+					</div>
+					<p>During this week, we designed a first version of our prototype for testing. It was bright orange and very effective on the MKRSPC tables! It was too small in diameter/accommodation for own my table thickness, however. Our biggest lesson here is that asking for help early and often can help yield high rewards.</p>
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/4.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/5.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/6.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/7.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/9.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/10.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/11.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/12.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/13.png" alt="" /></span></div>
+							<div class="col-8 off-2"><span class="image fit"><img src="images/w2-3/14.png" alt="" /></span></div>
+						</div>
+					</div>
+					<p>Through these weeks, the most important challenge that we faced included being able to find stability in our design, while ensuring that the design has a snug fit with the table, no matter its length. Our lesson here is that solving designs through challenges can be very effective. After week 3, one of the instructors suggested having an accelerated pace of iterations done; this train of thought spurred us to create much more than we could have imagined before.</p>
+
+					<hr class="major" />
+
+				</section>
 
 			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<!-- Sidebar -->
+		<div id="sidebar">
+			<div class="inner">
 
-	</body>
+				<!-- Menu -->
+				<nav id="menu">
+					<header class="major">
+						<h2>Menu</h2>
+					</header>
+					<ul>
+						<li><a href="index.html">Homepage</a></li>
+						<li><a href="team.html">About Us (+ contributions)</a></li>
+						<li><a href="process.html">Design Process</a></li>
+					</ul>
+				</nav>
+
+
+				<!-- Footer -->
+				<footer id="footer">
+					<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a
+							href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5
+							UP</a>.</p>
+				</footer>
+
+			</div>
+		</div>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
