--- a/process.html
+++ b/process.html
@@ -128,6 +128,46 @@
 
 					<hr class="major" />
 
+					<h3>Week 4-5</h3>
+					<p>In these weeks, there has been a large amount of prototyping done in a very short timespan; Xuefei and Guanting diverged briefly in their trains of thought towards what the final design could look like, so the merging process that happened towards the end definitely helped us to bring the best out of both worlds. Below we shall list all of the iterations that we have created.</p>
+					
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 off-2"><span class="image fit"><img src="images/Final/1.png" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>In this iteration, the 5-shaped design was an attempt to make more flush contact on table surfaces, since tables are usually not very rounded at the edges. Compared to previous iterations, this one allows users to not be bothered as much by the "air gap" formed between the table edge and the product c-joint. Its weakness is that it really cannot accommodate for tables that are too thick and wide.</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 off-2"><span class="image fit"><img src="images/Final/2.png" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>In this iteration, the S-shape design incorporated a curve to allow for more stability in remote control holding. Users can now put in remote controls without much worry on whether or not the holder would flip from the momentum. Modularity also allows for additional holders to be stacked next to each other as well (located on left and right of device).</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-8 off-2"><span class="image fit"><img src="images/Final/3.png" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>In this iteration, we adopted a flexible structure and on our device to allow for both Xuefei's and Guanting's tables to be held with a snug fit. This device accommodates both 2cm and 4cm thickness tables through flexibility.</p>
+					<p>Note the modular remote-helpers, purple, installed in the channels. This allows for less movement from remote controls, once they are placed inside.</p>
+
+					<div class="box alt">
+						<div class="row gtr-50 gtr-uniform">
+							<div class="col-4"><span class="image fit"><img src="images/Final/4.png" alt="" /></span>
+							</div>
+							<div class="col-4"><span class="image fit"><img src="images/Final/5.png" alt="" /></span>
+							</div>
+							<div class="col-4"><span class="image fit"><img src="images/Final/6.png" alt="" /></span>
+							</div>
+						</div>
+					</div>
+					<p>Final iteration. We have slots to accommodate for remote-helpers, a semi-flexible S-shape structure, and a housing for circuits and the limit switch. The table can accommodate for a very wide range of table widths.</p>
+
 				</section>
 
 			</div>
