--- a/process.html
+++ b/process.html
@@ -137,7 +137,7 @@
 							</div>
 						</div>
 					</div>
-					<p>In this iteration, the 5-shaped design was an attempt to make more flush contact on table surfaces, since tables are usually not very rounded at the edges. Compared to previous iterations, this one allows users to not be bothered as much by the "air gap" formed between the table edge and the product c-joint. Its weakness is that it really cannot accommodate for tables that are too thick and wide.</p>
+					<p>In this iteration (Week 4), the 5-shaped design was an attempt to make more flush contact on table surfaces, since tables are usually not very rounded at the edges. Compared to previous iterations, this one allows users to not be bothered as much by the "air gap" formed between the table edge and the product c-joint. Its weakness is that it really cannot accommodate for tables that are too thick and wide. During this week, we learned about how to optimize drawing in Fusion 360; I have often done a lot of rotations in order to get my drawings done correctly earlier before, so seeing that easier methods exist (such as using splines and offseting lines right after designing the shapes) is definitely a productivity booster.</p>
 
 					<div class="box alt">
 						<div class="row gtr-50 gtr-uniform">
@@ -166,7 +166,9 @@
 							</div>
 						</div>
 					</div>
-					<p>Final iteration. We have slots to accommodate for remote-helpers, a semi-flexible S-shape structure, and a housing for circuits and the limit switch. The table can accommodate for a very wide range of table widths.</p>
+					<p>Final iteration. We have slots to accommodate for remote-helpers, a semi-flexible S-shape structure, and a housing for circuits and the limit switch. The table can accommodate for a very wide range of table widths. We now have 5mm thickness on the topmost board for rigidity, followed by a flexible 3mm thickness for the majority of the design. Please note that, in the center image, users are able to put in dividers to help make putting in the remote easier for themselves in the future.</p>
+
+					<p>Our takeaway from Week 5 is, above everything else, we are capable of creating good products. Despite the seeming simplicity in our design, we have actually done a fair number of iterations to get to a point that we can both be satisfied on. Being able to evaluate these designs on the fly is an important skill to have, and we look forward to further honing these skills in the near future as well.</p>
 
 				</section>
 
